--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 <body>
     <input type="text" id="name" placeholder="Enter your name">
     <button id="save" onclick="save()">save on</button>
+    <p id="gretting">Hello!!!!!</p>
 
     <script>
         function save(){
-            
+            const nameElement= document.getElementById("name");
+            const userName=nameElement.value;
+            localStorage.setItem("name",userName);
+
+            const grettingElement=document.getElementById("gretting");
+            grettingElement.innerText=`Hello ${nameElement.value}`;
         }
     </script>
     
