--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 
             const grettingElement=document.getElementById("gretting");
             grettingElement.innerText=`Hello ${nameElement.value}`;
+
+            const btnElement= document.getElementById("save");
+            btnElement.style.display="none";
+            nameElement.style.display="none";
         }
+       
     </script>
     
 </body>
